--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="initial-scale=1, width=device-width" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -40,8 +41,11 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
-
+<script src="bower_components/aos/dist/aos.js"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+<script>
+  AOS.init();
+</script>
 
 </html>
